--- a/src/css/mainContent.css
+++ b/src/css/mainContent.css
@@ -1,13 +1,9 @@
 .main-content {
   width: 80%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
+  top: 100px;
+  left: 50%; 
+  transform: translatex(-50%);
   z-index: 1;
 }
 
