--- a/src/css/todoList.css
+++ b/src/css/todoList.css
@@ -1,70 +1,74 @@
-.list{
-    background-color: var(--very-dark-desaturated-blue);
-    margin-top: 20px;
-    border-radius: 6px;
-    color: var(--light-grayish-blue-dark);
+.list {
+  background-color: var(--very-dark-desaturated-blue);
+  margin-top: 20px;
+  border-radius: 6px;
+  color: var(--light-grayish-blue-dark);
 }
 
-.list ul{
-    list-style: none;
-    padding: 0;
+.list ul {
+  list-style: none;
+  padding: 0;
 }
 
-.list .todo{
-    padding: 20px;
-    position: relative;
-    padding-left: 50px;
+.list .todo {
+  padding: 20px;
+  position: relative;
+  padding-left: 50px;
 }
 
-.todo-card{
-    position: relative;
+.todo-card {
+  position: relative;
 }
 
-.list button{
-    position: absolute;
-    top: 50%;
-    left: 7%;
-    width: 20px;
-    height: 20px;
-    border: 1px solid var(--light-grayish-blue-dark);
-    border-radius: 50%;
-    background-color: transparent;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    z-index: 5;
+.list button {
+  position: absolute;
+  top: 50%;
+  left: 7%;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--light-grayish-blue-dark);
+  border-radius: 50%;
+  background-color: transparent;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  z-index: 5;
 }
 
-.list .button:hover{
-    border: 1px solid var(--check-background);
-    background: var(--check-background);
-    cursor: pointer;
+.list .button:hover {
+  border: 1px solid var(--check-background);
+  background: var(--check-background);
+  cursor: pointer;
 }
 
-.list .selected svg{
-    position: absolute;
-    bottom: 4px;
-    right: 4px;
+.list .button svg {
+  position: absolute;
+  bottom: 4px;
+  right: 4px;
+}
+
+.list .button.finished {
+  background: var(--check-background);
 }
 
 @media (min-width: 768px) {
-    .todo-card button {
-      left: 5%;
-    }
+  .todo-card button {
+    left: 5%;
   }
+}
 
-.list .todo::before{
-content: '';
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-height: 1px;
-background-color: var(--very-dark-grayish-blue);
+.list .todo::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--very-dark-grayish-blue);
 }
