--- a/src/css/todoList.css
+++ b/src/css/todoList.css
@@ -81,7 +81,8 @@
 .list .footer {
   padding: 5px 10px;
   text-align: center;
-  font-weight: lighter;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 @media (min-width: 768px) {
